--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ViewHistoryActivity" />
+        <activity android:name=".EditEmotionActivity" />
+        <activity android:name=".ViewHistoryActivity2"></activity>
     </application>
 
 </manifest>
