Finished ViewCountsActivity, finished everything except delete in ViewHistoryActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".ViewHistoryActivity" />
         <activity android:name=".EditEmotionActivity" />
+        <activity android:name=".ViewCountsActivity"></activity>
     </application>
 
 </manifest>
