Improved documentation, started on date editing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
         <activity android:name=".ViewHistoryActivity" />
         <activity android:name=".EditEmotionActivity" />
-        <activity android:name=".ViewCountsActivity"></activity>
+        <activity android:name=".ViewCountsActivity"/>
     </application>
 
 </manifest>
